syntax = "proto3";
package mathing;

import "user_create.proto";

service UserService {
  rpc UserCreate (UserCreateRequest) returns (UserCreateResponse);
}
